--- a/documentation/css/material-dashboard.css
+++ b/documentation/css/material-dashboard.css
@@ -4072,7 +4072,7 @@ tbody.collapse.show {
   padding: 0.5rem 0.75rem;
   margin-left: 0;
   line-height: 1.25;
-  color: #2196f3;
+  color: rgb(226, 222, 207);
   background-color: transparent;
   border: 0 solid #dee2e6; }
   .page-link:hover {
@@ -4100,8 +4100,8 @@ tbody.collapse.show {
 .page-item.active .page-link {
   z-index: 1;
   color: #ffffff;
-  background-color: #2196f3;
-  border-color: #2196f3; }
+  background-color: rgb(255, 209, 0);
+  border-color: rgb(255, 209, 0); }
 
 .page-item.disabled .page-link {
   color: #6c757d;
