--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -58,44 +58,44 @@
                     <th class="text-center"><i class="fa fa-gear"></i></th>
                   </tr>
                 </thead>
-                <tbody *ngFor="let item of itemsTest">
+                <tbody *ngFor="let item of items?.records">
                   <!---->
                   <tr>
                     <!-- ข้อมูลที่จะดึงจาก services มาใส่ใน tbody นี้นะมีแบบให้แห้แหละ -->
 
                     <td>
                       
-                      {{item.id}}
+                      {{item.record_id}}
                     </td>
                     <td>
                     
-                      {{item.startDate}}
+                      {{item.record_star_date | thaidate: "medium"}}
                     </td>
                     <td>
                    
-                      {{item.endDate}}
+                      {{item.record_end_date | thaidate: "medium"}}
                     </td>
                     <td>
                    
-                      {{item.location}}
+                      {{item.record_location}}
                     </td>
 
                     <td class=" text-center " style="width: 1%; white-space: nowrap;">
-
-                      <button (click)="openModal()" class="btn btn-warning" style="border: none; background: none;">
-                        <!--data-toggle="tooltip" data-placement="bottom" title="ดูรายละเอียด"-->
-                        <i class="fa fa-file-text-o" style="color: black;"></i>
+                      <!-- <a href="" (click)="openModal()"><i class="fa fa-file-text-o" ></i></a>&nbsp; -->
+                      <!-- <a href=""  (click)="onRecord()" ><i class="fa fa-pencil-square-o" ></i></a>&nbsp;
+                      <a href=""><i class="fa fa-file-pdf-o" (click)="printPDF()" ></i></a> -->
+                      <button (click)="openModal()" class="text-primary" style="border: none; background: none;">
+                        <i class="fa fa-file-text-o  text-primary" style="color: black;"></i>
                       </button>&nbsp;
 
 
-                      <button (click)="onRecord()" class="btn btn-warning"
-                        style="border: none; background: none;"><!--  data-toggle="tooltip" data-placement="top" title="จดบันทึการตรวจสอบ"-->
-                        <!--class="btn btn-danger pull-center"-->
-                        <i class="fa fa-pencil-square-o" style="color: black;"></i>
+                      <button (click)="onRecord()"
+                        style="border: none; background: none;" class="text-primary">
+                        <i class="fa fa-pencil-square-o  text-primary" style="color: black;"></i>
                       </button> &nbsp;
 
-                      <button class="btn btn-warning" style="border: none; background: none;">
-                        <i class="fa fa-file-pdf-o" (click)="printPDF()" style="color: black;"></i>
+                      <button style="border: none; background: none;">
+                        <i  class="fa fa-file-pdf-o text-primary" (click)="printPDF()" style="color: black;"></i>
                         &nbsp;
                       </button>
                     </td>
@@ -278,36 +278,36 @@
             <div class="modal-body-detail" [ngStyle]="{ width: '60%', height: '297mm' }">
               <!-- เนื้อหาของป๊อปอัพ -->
               <form action method="get">
-                <div class="left-panel" > <!--*ngFor="let item of itemsTest"-->
+                <div class="left-panel" *ngFor="let item of items?.records"> <!---->
                   <div class="form-group">
                     <label>ครั้งที่:</label>
-                    <!-- <p>{{ item.id }}</p> -->
+                    <p>{{ item.record_id }}</p>
                   </div>
                   <div class="form-group">
                     <label>วันที่เริ่มตรวจสอบ:</label>
-                    <!-- <p>{{ item.startDate | date: 'd/M/yyyy' }}</p> -->
+                    <p>{{ item.record_star_date | thaidate: 'forlog' }}</p>
                   </div>
                   <div class="form-group">
                     <label>วันที่เสร็จสิ้น:</label>
-                    <!-- <p>{{ item.endDate | date: 'd/M/yyyy' }}</p> -->
+                    <p>{{ item.record_end_date | thaidate: 'forlog' }}</p>
                   </div>
                   <div class="form-group">
                     <label>หัวข้อการตรวจสอบ:</label>
-                    <!-- <p>{{ item.topic }}</p> -->
+                    <p>{{ item.record_topic }}</p>
                   </div>
                   <div class="form-group">
                     <label>รายละเอียด:</label>
-                    <!-- <p>{{ item.detail }}</p> -->
+                    <p>{{ item.record_detail }}</p>
                   </div>
                   <div class="form-group">
                     <label>สถานที่</label>
-                    <!-- <p>{{ item.location }}</p> -->
+                    <p>{{ item.record_location }}</p>
                   </div>
                   <div class="form-group">
                     <label>รายชื่อผู้รับผิดชอบ:</label>
-                    <!-- <div *ngFor="let person of item.responsiblePeople">
-                      <p>{{ person.rank }} &nbsp; : &nbsp; {{ person.name }}</p>
-                    </div> -->
+                    <div *ngFor="let person of items?.views">
+                      <p>{{ person.view_rank }} &nbsp; : &nbsp; {{ person.view_full_name }}</p>
+                    </div>
                   </div>
                 </div>
               </form>
