--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -59,7 +59,7 @@
                   </tr>
                 </thead>
                 <tbody *ngFor="let item of itemsTest">
-                  <!---->
+                  
                   <tr>
                     <!-- ข้อมูลที่จะดึงจาก services มาใส่ใน tbody นี้นะมีแบบให้แห้แหละ -->
 
@@ -278,36 +278,36 @@
             <div class="modal-body-detail" [ngStyle]="{ width: '60%', height: '297mm' }">
               <!-- เนื้อหาของป๊อปอัพ -->
               <form action method="get">
-                <div class="left-panel" > <!--*ngFor="let item of itemsTest"-->
+                <div *ngFor="let item of itemsTest" class="left-panel" > 
                   <div class="form-group">
                     <label>ครั้งที่:</label>
-                    <!-- <p>{{ item.id }}</p> -->
+                    <p>{{ item.id }}</p>
                   </div>
                   <div class="form-group">
                     <label>วันที่เริ่มตรวจสอบ:</label>
-                    <!-- <p>{{ item.startDate | date: 'd/M/yyyy' }}</p> -->
+                    <p>{{ item.startDate | date: 'd/M/yyyy' }}</p>
                   </div>
                   <div class="form-group">
                     <label>วันที่เสร็จสิ้น:</label>
-                    <!-- <p>{{ item.endDate | date: 'd/M/yyyy' }}</p> -->
+                    <p>{{ item.endDate | date: 'd/M/yyyy' }}</p>
                   </div>
                   <div class="form-group">
                     <label>หัวข้อการตรวจสอบ:</label>
-                    <!-- <p>{{ item.topic }}</p> -->
+                    <p>{{ item.topic }}</p>
                   </div>
                   <div class="form-group">
                     <label>รายละเอียด:</label>
-                    <!-- <p>{{ item.detail }}</p> -->
+                    <p>{{ item.detail }}</p>
                   </div>
                   <div class="form-group">
                     <label>สถานที่</label>
-                    <!-- <p>{{ item.location }}</p> -->
+                    <p>{{ item.location }}</p>
                   </div>
                   <div class="form-group">
                     <label>รายชื่อผู้รับผิดชอบ:</label>
-                    <!-- <div *ngFor="let person of item.responsiblePeople">
+                    <div *ngFor="let person of item.responsiblePeople">
                       <p>{{ person.rank }} &nbsp; : &nbsp; {{ person.name }}</p>
-                    </div> -->
+                    </div>
                   </div>
                 </div>
               </form>
