--- a/src/app/table-list/table-list.component.css
+++ b/src/app/table-list/table-list.component.css
@@ -113,3 +113,10 @@ label{
     padding-left: 10px;
   }
 
+  .person-details {
+    display: flex;
+    justify-content: space-between;
+  }
+  .person-rank, .person-fullname {
+    flex: 1;
+  }
