--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -235,7 +235,7 @@
 </div>
 
 <!-- Map Modal -->
-<div class="modal fade" id="mapModal" tabindex="-1" role="dialog" aria-labelledby="mapModalLabel" aria-hidden="true">
+<!-- <div class="modal fade" id="mapModal" tabindex="-1" role="dialog" aria-labelledby="mapModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -252,7 +252,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
           <!--land Insert end here-->
           <!-- รายละเอียด-->
