--- a/src/app/table-list/table-list.component.css
+++ b/src/app/table-list/table-list.component.css
@@ -12,9 +12,11 @@
 .modal-body-detail{ 
   position: relative;
     display: flex;
+    flex-direction: column;
+    margin-top:10px;
    left: 50%;
    transform: translateX(-50%);
-   
+
     width: 100%;
     border: 1px solid #000;
     font-family: 'TH SarabunPSK', sans-serif; /* ใช้ฟอนต์ราชการ */
@@ -24,6 +26,7 @@
 .modal-content{
   left: 5.5px;
   justify-content: center;
+  
 }
 .card-header{
     position: relative;
@@ -88,14 +91,23 @@ label{
     z-index: -1;
 }
 
-.left-panel {
+.mainCenter-panel {
     position: relative;
-    flex: 1;
-    padding-left: 20px;
-    border-right: 1px solid #ddd;
-    width:70%;
+    background: #fff;
+    padding: 96px;
     height: 100%;
   }
+.header-topic{
+  position: relative;
+  padding-top: 1px;
+  display: flex;
+  flex-direction: column;
+ 
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
 .right-panel {
   width: 60%;
   height: 150vh;
@@ -111,29 +123,86 @@ label{
     top: 0;
     left: 0;
 }
-.right-panelOnBottom{
-  position: absolute;
+/* .right-panelOnBottom{
+  position: relative;
   bottom: 0;
   right: 25px;
-}
-.right-panel img {
+} */
+/* .right-panel img {
     width: 30mm;   
     height: 20mm;
     border: 1px solid #ddd;
     margin-left: 50px;
-  }
+  } */
   .form-group {
     margin-bottom: 10px;
   }
+
+  .detail-content{
+    position: relative;
+    margin-top: 60px;
+  }
   
-  .form-group label {
+  .detail-content .form-group label {
     display: inline-block;
     font-weight: bold;
   }
   
-  .form-group p {
+  .detail-content .form-group p {
     display: inline-block;
     margin: 0;
     padding-left: 10px;
   }
 
+  .date-flex{
+    display: flex;
+    justify-content: space-between;
+  }
+
+
+
+  .main-detail {
+    position: relative;
+    border-collapse: collapse; /* เพื่อทำให้เส้นขอบรวมกัน */
+    width: 100%;
+    padding: 20px; /* เพิ่มระยะห่างบนและล่าง */
+    font-family: 'TH SarabunPSK', sans-serif; /* ใช้ฟอนต์ราชการ */
+  }
+  
+  .main-detail th, .main-detail td {
+    border: 1px solid black; /* เส้นขอบสีดำ */
+    padding: 5px; /* ระยะห่างภายในเซลล์ */
+    text-align: left; /* จัดตำแหน่งเนื้อหาให้อยู่ทางซ้าย */
+  }
+  
+  .main-detail th:first-child, .main-detail td:first-child {
+    width: 10%;
+  }
+  
+  .main-detail th:last-child, .main-detail td:last-child {
+    width: 90%;
+  }
+  .main-detail th {
+    background-color: #f2f2f2; /* พื้นหลังสีเทาอ่อนสำหรับหัวตาราง */
+  }
+  
+  .main-detail tr:nth-child(even) {
+    background-color: #f9f9f9; /* พื้นหลังสีเทาอ่อนสำหรับแถวคู่ */
+  }
+
+  .sign-content{
+    position: relative;
+    padding-left: 380px;
+    text-align: center;
+    margin-top: 20px;
+  }
+
+  .sign-content img{
+    width: 30mm;   
+    height: 20mm;
+    border: 1px solid #ddd;
+    margin-left: 58px;
+   
+  }
+
+ 
