--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -198,9 +198,46 @@
                       </div>
                     </div>
 
+                    <!-- <form action method="post" [formGroup]="addPersonalForm"> -->
+                      <div class="row inputLabel">
+                        <div class="col-sm-3">
+                          <label for="rank">ยศ/ตำแหน่ง</label>
+                        </div>
+                        <div class="col-sm-5">
+                          <label for="fullname">ชื่อ-นามสกุล</label>
+                        </div>
+                        <div class="col-md-2">
+                          <button type="button" (click)="addPersonInput()" style="border: none; background: none;">
+                            <i class="fa fa-plus"></i>
+                          </button>
+                        </div>
 
+                      </div>
+                      <!-- formArrayName="personal" -->
+                      <div >
+                        <div *ngFor="let person of addItemForm.get('personal')['controls']; let i = index" [formGroup]="addItemForm">
+                          <div class="row mx-0" [formGroup]="person" >
+                            <div class="col-sm-3">
+                              <div class="form-group">
+  
+                                <input type="text" id="rank-{{i}}" formControlName="rank" class="form-control"
+                                  placeholder="ยศ/ตำแหน่ง" />
+                              </div>
+                            </div>
+                            <div class="col-sm-5">
+                              <div class="form-group">
+  
+                                <input type="text" id="fullname-{{i}}" formControlName="fullname" class="form-control"
+                                  placeholder="--กรอกข้อมูล--" />
+                              </div>
+                            </div>
+                          </div>
 
-                    <form action method="post" [formGroup]="addPersonalForm">
+                        </div>
+
+                      </div>
+                    <!-- </form> -->
+                    <!-- <form action method="post" [formGroup]="addPersonalForm">
                       <div class="row">
 
                         <div class="col-sm-3">
@@ -235,7 +272,7 @@
 
 
                       </div>
-                    </form>
+                    </form> -->
 
                     <div class="form-group">
                       <label for="detail">รายละเอียด</label>
@@ -278,52 +315,59 @@
                 <div id="myDetail" class="modal-body-detail" [ngStyle]="{ width: '210mm', height: '297mm' }">
                   <!-- เนื้อหาของป๊อปอัพ -->
                   <form action method="get">
-                    <div class="left-panel "> <!---->
-                      <div class="form-group ">
-                        <label>ครั้งที่: </label>
-                        <p>{{ detailItems?.record_id }}</p>
+                    <div class="mainCenter-panel "> <!---->
+                      <div class="header-topic">
+
+                        <label style="font-size: 16px; font-weight: bold;">เอกสารตรวจสอบ</label>
+                        <p>{{ detailItems?.record_topic }}</p>
 
                       </div>
-                      <div class="form-group ">
-                        <label>วันที่เริ่มตรวจสอบ:</label>
-                        <p>{{ detailItems?.record_star_date | thaidate: 'full' }}</p>
-                      </div>
-                      <div class="form-group ">
-                        <label>วันที่เสร็จสิ้น:</label>
-                        <p>{{ detailItems?.record_end_date | thaidate: 'full' }}</p>
-                      </div>
-
-                      <div class="form-group">
-                        <label>สถานที่</label>
-                        <p>{{ detailItems?.record_location }}</p>
-                      </div>
-
-                    </div>
-                  </form>
-                  <div class="right-panel">
-                    <form action="">
-                      <div class="right-panelOnTop">
-                        <div class="form-group">
-                          <label>หัวข้อการตรวจสอบ:</label>
-                          <p>{{ detailItems?.record_topic }}</p>
+                      <div class="detail-content">
+                        <div class="date-flex">
+                          <div class="form-group start-date">
+                            <label>วันที่เริ่มการตรวจสอบ:</label>
+                            <p>{{ detailItems?.record_star_date | thaidate: 'medium' }}</p>
+                          </div>
+                          <div class="form-group end-date">
+                            <label>วันที่เสร็จสิ้นการตรวจสอบ:</label>
+                            <p>{{ detailItems?.record_end_date | thaidate: 'medium' }}</p>
+                          </div>
                         </div>
+
+
                         <div class="form-group">
                           <label>รายละเอียด:</label>
                           <p>{{ detailItems?.record_detail }}</p>
                         </div>
+                        <div class="form-group">
+                          <label>สถานที่</label>
+                          <p>{{ detailItems?.record_location }}</p>
+                        </div>
                       </div>
+                      <table class="main-detail">
+                        <thead>
+                          <tr>
+                            <th>ครั้งที่</th>
+                            <th>เนื้อหาการตรวจสอบ</th>
+                          </tr>
 
-                      <div class="right-panelOnBottom">
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>{{detailItems?.record_id}}/{{detailItems?.record_star_date | thaidate :'year'}}</td>
+                            <td>---- เนื้อหา ---- </td>
+                          </tr>
+                        </tbody>
+                      </table>
+
+                      <div class="sign-content">
                         <div class="form-group">
                           <label>รายชื่อผู้รับผิดชอบ:</label>
-
-
-
                           <div *ngFor="let person of items?.views"><!---->
                             <div>
                               <div> <!-- เพิ่มปุ่มอัพโหลดรูปภาพและแสดงภาพที่อัพโหลด -->
-                                <i class="fa fa-upload" style="font-size:24px; cursor: pointer;"
-                                  (click)="uploadImage()"></i>
+                                <i class="fa fa-upload" style="font-size:24px; cursor: pointer;" (click)="uploadImage()"
+                                  *ngIf="!isLoading"></i>
                                 <input type="file" id="image-upload" (change)="onFileChange($event)" accept="image/*"
                                   style="display: none;">
                                 <img [src]="uploadedImageUrl" alt="Uploaded Image" *ngIf="uploadedImageUrl"
@@ -336,11 +380,23 @@
 
                           </div>
                         </div>
+
                       </div>
 
 
+                    </div>
+                  </form>
+                  <!-- <div class="right-panel">
+                    <form action="">
+                      <div class="right-panelOnTop">
+                  
+                      </div>
+
+                     
+
+
                     </form>
-                  </div>
+                  </div> -->
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-success pull-center" (click)="printPDF()">
@@ -552,7 +608,7 @@
                     </tbody>
                   </table>
                 </div>
-              </div>
+              </div>x
             </div>
           </div>
         </div>
